--- a/TD_Synthese/TD_01_BancHydraulique/Cy_02_Synthese_TD_01_BancHydraulique.tex
+++ b/TD_Synthese/TD_01_BancHydraulique/Cy_02_Synthese_TD_01_BancHydraulique.tex
@@ -219,7 +219,7 @@ Données numériques :
 	\item $S_a$ et $S_b$ :	sections de l’équipage mobile côté tube et côté opposé au tube,
 $S_a -S_b  = \SI{1,88}{10^{-3}.m^2}$;	
 	\item $m$ :		masse de l’ensemble mobile = \SI{25}{kg};
-	\item $f ’$ :		coefficient de frottement visqueux = 10 N/m/s;
+	\item $f ’$ :		coefficient de frottement visqueux = 10 N/(m/s);
 	\item $V_t$ :		le volume du tube = \SI{1,34}{m^3};
 	\item $r$ :		le tube est assimilé à un ressort de raideur = \SI{5}{10^8.N/m}.
 \end{itemize}
@@ -230,7 +230,7 @@ $S_a -S_b  = \SI{1,88}{10^{-3}.m^2}$;
 
 L’équation du mouvement de l’équipage mobile est donnée par : 
 $$
-m\ddot{L}(t)=-rL(t)\left(S_a-S_b \right)p_e(t)-f'L(t).
+m\ddot{L}(t)=-rL(t)+\left(S_a-S_b \right)p_e(t)-f'\dot{L}(t).
 $$
 
 \subparagraph{}
