--- a/TD_Synthese/TD_01_BancHydraulique/Cy_02_Synthese_TD_01_BancHydraulique.tex
+++ b/TD_Synthese/TD_01_BancHydraulique/Cy_02_Synthese_TD_01_BancHydraulique.tex
@@ -42,7 +42,7 @@
 %\def\xxonglet{Part. 1 -- Ch. 3}
 \def\xxonglet{Cycle 02}
 
-\def\xxactivite{TD 01}
+\def\xxactivite{TD Synthèse}
 \def\xxauteur{\textsl{Xavier Pessoles}}
 
 \def\xxcompetences{%
