--- a/Colles/Colle_02_MIR_PrecisionStabilite/Cy_02_03_Colle_02_.tex
+++ b/Colles/Colle_02_MIR_PrecisionStabilite/Cy_02_03_Colle_02_.tex
@@ -366,23 +366,39 @@ On souhaite obtenir une vitesse de translation indépendante de l’inclinaison.
 %\else
 %\fi
 
-%\newpage
+\newpage
 
 
 \begin{center}
-%	\includegraphics[width=.9\linewidth]{images/cor_01}
+	\includegraphics[width=.8\linewidth]{images/cor_01}
 \end{center}
 
 \begin{center}
-%	\includegraphics[width=.9\linewidth]{images/cor_02}
+	\includegraphics[width=.8\linewidth]{images/cor_02}
 \end{center}
 
 \begin{center}
-%	\includegraphics[width=.9\linewidth]{images/cor_03}
+	\includegraphics[width=.8\linewidth]{images/cor_03}
 \end{center}
 
 \begin{center}
-%	\includegraphics[width=.9\linewidth]{images/cor_04}
+	\includegraphics[width=.8\linewidth]{images/cor_04}
+\end{center}
+
+\begin{center}
+	\includegraphics[width=.8\linewidth]{images/cor_05}
+\end{center}
+
+\begin{center}
+	\includegraphics[width=.8\linewidth]{images/cor_06}
+\end{center}
+
+\begin{center}
+	\includegraphics[width=.8\linewidth]{images/cor_07}
+\end{center}
+
+\begin{center}
+	\includegraphics[width=.8\linewidth]{images/cor_08}
 \end{center}
 
 \end{document}
