--- a/QCM/QCM_01/Cy_01_01_QCM_01.tex
+++ b/QCM/QCM_01/Cy_01_01_QCM_01.tex
@@ -11,7 +11,7 @@
 %\fichefalse
 
 \proftrue
-\proffalse
+%\proffalse
 
 \tdtrue
 %\tdfalse
@@ -177,10 +177,9 @@ Vrai ou faux :
 \end{enumerate}
 \end{enumerate}
 
+\fi
 
 \end{multicols}
-
-\fi
 
 \ifprof
 \begin{corrige}
