--- a/Colles/Colle_03_Stabilite/Cy_02_03_Colle_03_Stabilite.tex
+++ b/Colles/Colle_03_Stabilite/Cy_02_03_Colle_03_Stabilite.tex
@@ -111,7 +111,7 @@ On considère la fonction de transfert en boucle ouverte d’un système : $G(p)
 \else
 \fi
 
-On place ce système dans une boucle de régulation à retour unitaire en le précédant d’un correcteur proportionnel $C(p)=K$. La boucle de retour est assurée par un système de fonction de transfert $B(p)=3$.
+On place ce système dans une boucle de régulation en le précédant d’un correcteur proportionnel $C(p)=K$. La boucle de retour est assurée par un système de fonction de transfert $B(p)=3$.
 
 \subparagraph{}
 \textit{Tracer le schéma-blocs.}
