--- a/Livret_Cycle_02/Cycle_02_Livret.tex
+++ b/Livret_Cycle_02/Cycle_02_Livret.tex
@@ -17,6 +17,18 @@
 \input{../Chapitre_01_Stabilite/Cours/Cy_02_Ch_01_Stabilite_Cours.tex}
 
 % Activation
+% Sujet
+\newpage
+\fichetrue \proffalse \tdtrue \coursfalse
+\graphicspath{{../style/png/}{../Chapitre_01_Stabilite/Activation_01/images/}}
+\input{../Chapitre_01_Stabilite/Activation_01/Cy_02_01_Activation_01.tex}
+
+
+% Corrigé
+\newpage
+\fichetrue \proftrue \tdtrue \coursfalse
+\graphicspath{{../style/png/}{../Chapitre_01_Stabilite/Activation_01/images/}}
+\input{../Chapitre_01_Stabilite/Activation_01/Cy_02_01_Activation_01.tex}
 
 % Application
 
