--- a/Livret_Cycle_02/Cycle_02_Livret.tex
+++ b/Livret_Cycle_02/Cycle_02_Livret.tex
@@ -56,7 +56,19 @@
 \graphicspath{{../style/png/}{../Chapitre_01_Stabilite/TD_01_Drone/images/}}
 \input{../Chapitre_01_Stabilite/TD_01_Drone/Cy_02_Ch_01_TD_02_Drone.tex}
 
-% TD 2
+
+% TD 2 Stabilisateur caméra Mines ponts 2018
+% Sujet Difficile
+\newpage
+\fichetrue \proffalse \tdtrue \coursfalse \normalfalse \difficiletrue  \tdifficilefalse \collefalse
+\graphicspath{{../style/png/}{../Chapitre_01_Stabilite/TD_02_Stabilisateur/images/}}
+\input{../Chapitre_01_Stabilite/TD_02_Stabilisateur/Cy_02_Ch_01_TD_02_Stabilisateur.tex}
+
+% Corrigé
+\newpage 
+\fichetrue \proftrue \tdtrue \coursfalse \normalfalse \difficiletrue  \tdifficilefalse \collefalse
+\graphicspath{{../style/png/}{../Chapitre_01_Stabilite/TD_02_Stabilisateur/images/}}
+\input{../Chapitre_01_Stabilite/TD_02_Stabilisateur/Cy_02_Ch_01_TD_02_Stabilisateur.tex}
 
 
 \end{document}
