--- a/style/new_pagegarde.tex
+++ b/style/new_pagegarde.tex
@@ -74,6 +74,7 @@
 \end{minipage}\hfill
 \begin{minipage}[c]{.6\linewidth}
 \startcontents
+%\printcontents{}{1}{}
 \printcontents{}{1}{}
 \end{minipage}
 \end{flushright}
