--- a/Livret_Cycle_02/Ch_02_Rapidite/Cycle_02_Livret_Ch_02_Rapidite.tex
+++ b/Livret_Cycle_02/Ch_02_Rapidite/Cycle_02_Livret_Ch_02_Rapidite.tex
@@ -42,20 +42,38 @@
 %\input{../Chapitre_01_Stabilite/Application_01/Cy_02_01_Application_01.tex}
 %
 %
-%% TD 1 DRONE Pole Joliot Curie ChateaiBriand
-%% Sujet
-%\newpage
-%\fichetrue \proffalse \tdtrue \coursfalse
-%\graphicspath{{../style/png/}{../Chapitre_01_Stabilite/TD_01_Drone/images/}}
-%\input{../Chapitre_01_Stabilite/TD_01_Drone/Cy_02_Ch_01_TD_02_Drone.tex}
-%
+
+% TD 1 Robovolc Vuibert
+% Sujet
+\newpage
+\fichetrue \proffalse \tdtrue \coursfalse
+\graphicspath{{../../style/png/}{../../Chapitre_02_Rapidite/TD_01_RobotClimber/images/}}
+\input{../../Chapitre_02_Rapidite/TD_01_RobotClimber/Cy_02_Ch_02_TD_01_RobotClimber.tex}
+
+
+% TD 1 Robovolc Vuibert
 %%% PAS DE CORRIGE !!!
-%\newpage
-%\fichetrue \proftrue \tdtrue \coursfalse
-%\graphicspath{{../style/png/}{../Chapitre_01_Stabilite/TD_01_Drone/images/}}
-%\input{../Chapitre_01_Stabilite/TD_01_Drone/Cy_02_Ch_01_TD_02_Drone.tex}
-%
-%
+\newpage
+\fichetrue \proftrue \tdtrue \coursfalse
+\graphicspath{{../../style/png/}{../../Chapitre_02_Rapidite/TD_01_RobotClimber/images/}}
+\input{../../Chapitre_02_Rapidite/TD_01_RobotClimber/Cy_02_Ch_02_TD_01_RobotClimber.tex}
+
+
+% TD 2 Radar F Mathurin
+% Sujet
+\newpage
+\fichetrue \proffalse \tdtrue \coursfalse
+\graphicspath{{../../style/png/}{../../Chapitre_02_Rapidite/TD_02_Radar/images/}}
+\input{../../Chapitre_02_Rapidite/TD_02_Radar/Cy_02_Ch_02_TD_02_Radar.tex}
+
+
+%%% PAS DE CORRIGE !!!
+\newpage
+\fichetrue \proftrue \tdtrue \coursfalse
+\graphicspath{{../../style/png/}{../../Chapitre_02_Rapidite/TD_02_Radar/images/}}
+\input{../../Chapitre_02_Rapidite/TD_02_Radar/Cy_02_Ch_02_TD_02_Radar.tex}
+
+
 %% TD 2 Stabilisateur caméra Mines ponts 2018
 %% Sujet Difficile
 %\newpage
