--- a/Livret_Cycle_02/Ch_03_Precision/Cycle_02_Livret_Ch_03_Precision.tex
+++ b/Livret_Cycle_02/Ch_03_Precision/Cycle_02_Livret_Ch_03_Precision.tex
@@ -28,18 +28,18 @@
 \graphicspath{{../../style/png/}{../../Chapitre_03_Precision/Activation_AssemblageFalcon/images/}}
 \input{../../Chapitre_03_Precision/Activation_AssemblageFalcon/Cy_02_03_Activation.tex}
 
-%% Application
-%% Sujet
-%\newpage
-%\fichetrue \proffalse \tdtrue \coursfalse
-%\graphicspath{{../style/png/}{../Chapitre_01_Stabilite/Application_01/images/}}
-%\input{../Chapitre_01_Stabilite/Application_01/Cy_02_01_Application_01.tex}
-%
-%%% PAS DE CORRIGE !!!
-%\newpage
-%\fichetrue \proftrue \tdtrue \coursfalse
-%\graphicspath{{../style/png/}{../Chapitre_01_Stabilite/Application_01/images/}}
-%\input{../Chapitre_01_Stabilite/Application_01/Cy_02_01_Application_01.tex}
+% Application
+% Sujet
+\newpage
+\fichetrue \proffalse \tdtrue \coursfalse
+\graphicspath{{../../style/png/}{../../Chapitre_03_Precision/Application_01/images/}}
+\input{../../Chapitre_03_Precision/Application_01/Cy_02_Ch_03_Application_01.tex}
+
+%% PAS DE CORRIGE !!!
+\newpage
+\fichetrue \proftrue \tdtrue \coursfalse
+\graphicspath{{../../style/png/}{../../Chapitre_03_Precision/Application_01/images/}}
+\input{../../Chapitre_03_Precision/Application_01/Cy_02_Ch_03_Application_01.tex}
 %
 %
 
