--- a/Livret_Cycle_02/Ch_03_Precision/Cycle_02_Livret_Ch_03_Precision.tex
+++ b/Livret_Cycle_02/Ch_03_Precision/Cycle_02_Livret_Ch_03_Precision.tex
@@ -43,20 +43,20 @@
 %
 %
 
-%% TD 1 Robovolc Vuibert
+%% TD 1 Fauteuil dynamique SOURCE ??
 %% Sujet
-%\newpage
-%\fichetrue \proffalse \tdtrue \coursfalse
-%\graphicspath{{../../style/png/}{../../Chapitre_02_Rapidite/TD_01_RobotClimber/images/}}
-%\input{../../Chapitre_02_Rapidite/TD_01_RobotClimber/Cy_02_Ch_02_TD_01_RobotClimber.tex}
-%
-%
-%% TD 1 Robovolc Vuibert
-%%%% PAS DE CORRIGE !!!
-%\newpage
-%\fichetrue \proftrue \tdtrue \coursfalse
-%\graphicspath{{../../style/png/}{../../Chapitre_02_Rapidite/TD_01_RobotClimber/images/}}
-%\input{../../Chapitre_02_Rapidite/TD_01_RobotClimber/Cy_02_Ch_02_TD_01_RobotClimber.tex}
+\newpage
+\fichetrue \proffalse \tdtrue \coursfalse
+\graphicspath{{../../style/png/}{../../Chapitre_03_Precision/TD_01_FauteuilDynamique/images/}}
+\input{../../Chapitre_03_Precision/TD_01_FauteuilDynamique/Cy_02_Ch_03_TD_01_FauteuilDynamique.tex}
+
+
+%% TD 1 Fauteuil dynamique SOURCE ??
+%% Corrige A FINIR 
+\newpage
+\fichetrue \proftrue \tdtrue \coursfalse
+\graphicspath{{../../style/png/}{../../Chapitre_03_Precision/TD_01_FauteuilDynamique/images/}}
+\input{../../Chapitre_03_Precision/TD_01_FauteuilDynamique/Cy_02_Ch_03_TD_01_FauteuilDynamique.tex}
 %
 %
 %% TD 2 Radar F Mathurin
