--- a/Livret_Cycle_02/Ch_03_Precision/Cycle_02_Livret_Ch_03_Precision.tex
+++ b/Livret_Cycle_02/Ch_03_Precision/Cycle_02_Livret_Ch_03_Precision.tex
@@ -1,6 +1,6 @@
 \documentclass[10pt,fleqn]{article} % Default font size and left-justified equations
 \usepackage[%
-    pdftitle={Modélisation systèmes multiphysiques : Modélisation linéaire et non linéaire},
+    pdftitle={Modélisation systèmes multiphysiques : Précision des systèmes},
     pdfauthor={Xavier Pessoles}]{hyperref}
 
 \input{../../style/new_style}
@@ -52,26 +52,26 @@
 
 
 %% TD 1 Fauteuil dynamique SOURCE ??
-%% Corrige A FINIR 
+%% CORRIGE
 \newpage
 \fichetrue \proftrue \tdtrue \coursfalse
 \graphicspath{{../../style/png/}{../../Chapitre_03_Precision/TD_01_FauteuilDynamique/images/}}
 \input{../../Chapitre_03_Precision/TD_01_FauteuilDynamique/Cy_02_Ch_03_TD_01_FauteuilDynamique.tex}
-%
-%
-%% TD 2 Radar F Mathurin
-%% Sujet
+
+%%% TD 2 Segway - Vuibert
+%%% Corrige A FAIRE
 %\newpage
 %\fichetrue \proffalse \tdtrue \coursfalse
-%\graphicspath{{../../style/png/}{../../Chapitre_02_Rapidite/TD_02_Radar/images/}}
-%\input{../../Chapitre_02_Rapidite/TD_02_Radar/Cy_02_Ch_02_TD_02_Radar.tex}
+%\graphicspath{{../../style/png/}{../../Chapitre_03_Precision/TD_02_Segway_Vuibert/images/}}
+%\input{../../Chapitre_03_Precision/TD_02_Segway_Vuibert/Cy_02_Ch_03_TD_02_SegwayVuibert.tex}
 %
-%
-%%%% PAS DE CORRIGE !!!
+%%% TD 2 Segway - Vuibert
+%%% Corrige A FAIRE
 %\newpage
 %\fichetrue \proftrue \tdtrue \coursfalse
-%\graphicspath{{../../style/png/}{../../Chapitre_02_Rapidite/TD_02_Radar/images/}}
-%\input{../../Chapitre_02_Rapidite/TD_02_Radar/Cy_02_Ch_02_TD_02_Radar.tex}
+%\graphicspath{{../../style/png/}{../../Chapitre_03_Precision/TD_02_Segway_Vuibert/images/}}
+%\input{../../Chapitre_03_Precision/TD_02_Segway_Vuibert/Cy_02_Ch_03_TD_02_SegwayVuibert.tex}
+
 
 
 %% TD 2 Stabilisateur caméra Mines ponts 2018
