--- a/style/new_pagegarde.tex
+++ b/style/new_pagegarde.tex
@@ -3,6 +3,7 @@
 
 %%%%%%%% PAGE DE GARDE COURS
 \ifcours
+% ==== BANDEAU DES TITRES ==== 
 \begin{tikzpicture}[remember picture,overlay]
 \node at (current page.north west)
 {\begin{tikzpicture}[remember picture,overlay]
@@ -27,8 +28,10 @@
  };
 \end{tikzpicture}};
 \end{tikzpicture}
+% ==== FIN BANDEAU DES TITRES ==== 
 
 
+% ==== ONGLET 
 \begin{tikzpicture}[overlay]
 \node[shape=rectangle, 
       rounded corners = .25 cm,
@@ -36,10 +39,12 @@
 	  line width=2pt, 
 	  fill = ocre!10,
 	  minimum width  = 2.5cm,
-	  minimum height = 3cm,] at (18cm,0) {};
+	  minimum height = 3cm,] at (18.3cm,0) {};
 \node at (17.7cm,0) {\rotatebox{90}{\textbf{\Large\color{ocre}{\classe}}}};
 %{};
 \end{tikzpicture}
+% ==== FIN ONGLET 
+
 
 \vspace{3.5cm}
 
@@ -92,15 +97,16 @@
 \end{minipage}
  };
 \end{tikzpicture}
-\newpage
-\pagestyle{fancy}
 
 \newpage
 \pagestyle{fancy}
+
+%\newpage
+%\pagestyle{fancy}
 
 \else
 \fi
-
+%% FIN PAGE DE GARDE DES COURS
 
 %%%%%%%% PAGE DE GARDE TD
 \iftd
@@ -222,9 +228,9 @@
 	  line width=2pt, 
 	  fill = ocre!10,
 	  minimum width  = 2.5cm,
-	  minimum height = 2.5cm,] at (18.5cm,0.5cm) {};
+	  minimum height = 2.5cm,] at (18.5cm,1.1cm) {};
 %	  minimum height = 2.5cm,] at (18.5cm,0cm) {};
-\node at (17.7cm,0.5) {\rotatebox{90}{\textsf{\textbf{\large\color{ocre}{\classe}}}}};
+\node at (17.7cm,1.1cm) {\rotatebox{90}{\textsf{\textbf{\large\color{ocre}{\classe}}}}};
 %{};
 \end{tikzpicture}
 
