--- a/style/new_style.tex
+++ b/style/new_style.tex
@@ -10,10 +10,10 @@
 %	VARIOUS REQUIRED PACKAGES AND CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
-\usepackage[top=2.5cm,bottom=2cm,left=2cm,right=2cm,headsep=40pt,a4paper]{geometry} % Page margins
+%\usepackage[top=2.5cm,bottom=2cm,left=2cm,right=2cm,headsep=40pt,a4paper]{geometry} % Page margins
+\usepackage[top=2cm,bottom=3cm,left=2cm,right=2cm,a4paper]{geometry} % Page margins
 
 \usepackage{graphicx} % Required for including pictures
-
 
 \usepackage{lipsum} % Inserts dummy text
 
@@ -168,6 +168,8 @@
 \pagestyle{fancy}
  \renewcommand{\headrulewidth}{0pt}
  \fancyhead{}
+ 
+ % ENTETES de page
  \fancyhead[L]{%
  \noindent\begin{minipage}[c]{2.6cm}%
  \includegraphics[width=2cm]{logo_lycee.png}%
@@ -183,7 +185,8 @@
  \end{minipage}
 }
 
-
+ \fancyfoot{}
+ % PIEDS de page
 \fancyfoot[C]{\rule{12cm}{.5pt}}
 \renewcommand{\footrulewidth}{0.2pt}
 \fancyfoot[C]{\footnotesize{\bfseries \thepage}}
@@ -191,7 +194,6 @@
 \begin{minipage}[c]{.4\linewidth}
 \noindent\footnotesize{{\xxauteur}}
 \end{minipage}}
-
 
 \fancyfoot[R]{\footnotesize{\xxpied}
 \ifthenelse{\isodd{\value{page}}}{
@@ -207,31 +209,46 @@
 %{};
 \end{tikzpicture}}{}
 }
+
+
+
 %
 %
 %
 % Removes the header from odd empty pages at the end of chapters
 \makeatletter
-\renewcommand{\cleardoublepage}{
-\clearpage\ifodd\c@page\else
-\hbox{}
-\vspace*{\fill}
-\thispagestyle{empty}
-\newpage
-\fi}
+%\renewcommand{\cleardoublepage}{
+%\clearpage\ifodd\c@page\else
+%\hbox{}
+%\vspace*{\fill}
+%\thispagestyle{empty}
+%\newpage
+%\fi}
+
+%\fancypagestyle{plain}{%
+%\fancyhf{} % vide l’en-tête et le pied~de~page.
+%%\fancyfoot[C]{\bfseries \thepage} % numéro de la page en cours en gras
+%% et centré en pied~de~page.
+%\fancyfoot[R]{\footnotesize{\xxpied}}
+%\fancyfoot[C]{\rule{12cm}{.5pt}}
+%\renewcommand{\footrulewidth}{0.2pt}
+%\fancyfoot[C]{\footnotesize{\bfseries \thepage}}
+%\fancyfoot[L]{ 
+%\begin{minipage}[c]{.4\linewidth}
+%\noindent\footnotesize{{\xxauteur}}
+%\end{minipage}}}
 
 \fancypagestyle{plain}{%
 \fancyhf{} % vide l’en-tête et le pied~de~page.
-%\fancyfoot[C]{\bfseries \thepage} % numéro de la page en cours en gras
-% et centré en pied~de~page.
-\fancyfoot[R]{\footnotesize{\xxpied}}
 \fancyfoot[C]{\rule{12cm}{.5pt}}
 \renewcommand{\footrulewidth}{0.2pt}
 \fancyfoot[C]{\footnotesize{\bfseries \thepage}}
 \fancyfoot[L]{ 
 \begin{minipage}[c]{.4\linewidth}
 \noindent\footnotesize{{\xxauteur}}
-\end{minipage}}}
+\end{minipage}}
+\fancyfoot[R]{\footnotesize{\xxpied}}
+}
 
 
 
